# rag_poc

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run.py  setup.sh
mermaid/: README.md  class_diagram.md  component_interactions.md  data_ingestion_flow.md  database_schema.md  dependency_graph.md  file_structure.md  network_topology.md  rag_process_flow.md  system_architecture.md
ragstack/: __init__.py
ragstack/config/: settings.py
ragstack/core/: rag.py
ragstack/data_ingestion/: document_processor.py  excel_processor.py  file_watcher.py  text_chunker.py
ragstack/models/: embeddings.py  metadata.py
ragstack/tests/: __init__.py  test_document_processor.py  test_text_chunker.py
ragstack/utils/: logging.py
ragstack/utils/monitoring/: __init__.py  metrics.py  system_monitor.py
ragstack/vector_db/: base.py  chroma.py  factory.py  qdrant.py
ragstack/web/: api.py  chat_interface.py  dashboard.py  streamlit_app.py
scripts/: manage_system.sh  process_data.py  process_data.py.working  process_excel.py  rag.service  retry_failed_files.py  run_chat.py  run_dashboard.py  run_ingestion.py  run_tests.py  run_web.py  start_system.sh  test.py  test_chunking.py
