[project]
name = "ragstack"
version = "0.1.0"
description = "Self-hosted RAG environment with document processing and web UI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "RAG Development Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "watchdog>=2.3.1",
    "transformers>=4.35.0",
    "qdrant-client>=1.6.0",
    "torch>=2.0.0", 
    "numpy>=1.24.0",
    "nltk>=3.8.1",
    "ollama>=0.1.5",
    "chromadb>=0.4.18",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "openai>=1.1.0",
    "anthropic>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

web = [
    "streamlit>=1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
